[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traderie-client"
version = "0.1.0"
description = "Python API client for Traderie Diablo 2 Resurrected trading platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Matt Palen", email = "matthewmpalen@users.noreply.github.com" },
]
keywords = [
    "traderie",
    "diablo2",
    "d2r",
    "trading",
    "api",
    "client",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/matthewmpalen/traderie-client"
Repository = "https://github.com/matthewmpalen/traderie-client"
Issues = "https://github.com/matthewmpalen/traderie-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["traderie_client"]
